After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747739 - Gnome Shell crashes when pressing Fn + F9 multiple times (instead of enabling/disabling touchpad)
Gnome Shell crashes when pressing Fn + F9 multiple times (instead of enabling...
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: media-keys
3.16.x
Other Linux
: Normal critical
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2015-04-12 14:02 UTC by Patrik Stutz
Modified: 2015-04-20 13:39 UTC
See Also:
GNOME target: 3.16
GNOME version: ---


Attachments
journal (182.05 KB, text/plain)
2015-04-15 06:31 UTC, Patrik Stutz
  Details
media-keys: Port touchpad toggle code to new settings schema (2.22 KB, patch)
2015-04-15 16:24 UTC, Rui Matos
committed Details | Review

Description Patrik Stutz 2015-04-12 14:02:52 UTC
Hi guys

I've done updates on my Arch Linux machine yesterday, and after that I've got a problem with enabling/disabling the touchpad using Fn + F9. It used to work nicely before the update, but after it, nothing happened when doing the shortcut. Instead, when doing it multiple times, the gnome-shell session crashes.

The black popup that used to show up and which indicates if the touchpad is now enabled/disabled does not show up anymore.

The problem is: The touchpad is stuck at "disabled". Even after rebooting the laptop, it remains disabled.

I've done a quick look at the 50-synaptics.conf file, but it seems pretty normal to me:

# Example xorg.conf.d snippet that assigns the touchpad driver
# to all touchpads. See xorg.conf.d(5) for more information on
# InputClass.
# DO NOT EDIT THIS FILE, your distribution will likely overwrite
# it when updating. Copy (and rename) this file into
# /etc/X11/xorg.conf.d first.
# Additional options may be added in the form of
#   Option "OptionName" "value"
#
Section "InputClass"
        Identifier "touchpad catchall"
        Driver "synaptics"
        MatchIsTouchpad "on"
        Option "TapButton1" "1"
        Option "TapButton2" "2"
        Option "TapButton3" "3"
	Option "ClickPad" "true"
	Option "EmulatedMidButtonTime" "0"
	Option "SoftButtonAreas" "50% 0 82% 0 0 0 0 0"
# This option is recommend on all Linux systems using evdev, but cannot be
# enabled by default. See the following link for details:
# http://who-t.blogspot.com/2010/11/how-to-ignore-configuration-errors.html
        MatchDevicePath "/dev/input/event*"
EndSection

Section "InputClass"
        Identifier "touchpad ignore duplicates"
        MatchIsTouchpad "on"
        MatchOS "Linux"
        MatchDevicePath "/dev/input/mouse*"
        Option "Ignore" "on"
EndSection

# This option enables the bottom right corner to be a right button on
# non-synaptics clickpads.
# This option is only interpreted by clickpads.
Section "InputClass"
        Identifier "Default clickpad buttons"
        MatchDriver "synaptics"
        Option "SoftButtonAreas" "50% 0 82% 0 0 0 0 0"
EndSection

# This option disables software buttons on Apple touchpads.
# This option is only interpreted by clickpads.
Section "InputClass"
        Identifier "Disable clickpad buttons on Apple touchpads"
        MatchProduct "Apple|bcm5974"
        MatchDriver "synaptics"
        Option "SoftButtonAreas" "0 0 0 0 0 0 0 0"
EndSection

The only thing that I could imagine is the cause of the problem is the option "Ignore", but even after removing that line, the touchpad was still disabled.

Any ideas?
Comment 1 Patrik Stutz 2015-04-12 14:06:59 UTC
What I forgot to mention and could be of interest:
The only extension that I am using is "Dash-to-Dock", but even after uninstalling it, the problem was still there, so I doubt that this extension causes the bug.

Strangely, the extension also begins to act strange after pressing Fn + F9. It flickers for a very short time, displaying a totally different window/favorites list, the switches back to normal. This was not there before, too.

Should I maybe reinstall? It's just sad that the installation is just 3 weeks old :(
Comment 2 Rui Matos 2015-04-13 15:12:32 UTC
Please provide your journal contents after "gnome-shell session crashes".
Comment 3 Patrik Stutz 2015-04-13 17:22:04 UTC
Okay, here are the interesting lines from 'journalctl /bin/gnome-session -b 0' after I press FN+F9:

Apr 13 19:09:36 antergosbook gnome-session[518]: (gnome-settings-daemon:1216): GLib-GIO-ERROR **: Settings schema 'org.gnome.settings-daemon.peripherals.touchpad' is not installed
Apr 13 19:09:36 antergosbook gnome-session[518]: WARNING: App 'gnome-settings-daemon.desktop' respawning too quickly
Apr 13 19:09:36 antergosbook gnome-session[518]: WARNING: Application 'gnome-settings-daemon.desktop' killed by signal 5
Apr 13 19:09:36 antergosbook gnome-session[518]: Unrecoverable failure in required component gnome-settings-daemon.desktop
Apr 13 19:09:37 antergosbook gnome-session[518]: gnome-session[518]: WARNING: App 'gnome-settings-daemon.desktop' respawning too quickly
Apr 13 19:09:37 antergosbook gnome-session[518]: gnome-session[518]: WARNING: Application 'gnome-settings-daemon.desktop' killed by signal 5
Apr 13 19:09:39 antergosbook gnome-session[518]: gnome-session[518]: GLib-GObject-CRITICAL: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
Apr 13 19:09:49 antergosbook gnome-session[1335]: ** (gnome-session-check-accelerated:1345): WARNING **: Couldn't register with accessibility bus: Did not receive a reply. Possible causes include: the remote application did not send a reply, the message bus security policy blocked the reply, the reply timeout expired, or the network connection was broken.
Apr 13 19:09:49 antergosbook gnome-session[1335]: ** (gnome-settings-daemon:1352): WARNING **: Couldn't register with accessibility bus: Did not receive a reply. Possible causes include: the remote application did not send a reply, the message bus security policy blocked the reply, the reply timeout expired, or the network connection was broken.

All other lines in the log were pretty standard. If you need more logs, just tell me what logs exactly and how to get them :)
Comment 4 Patrik Stutz 2015-04-13 17:24:11 UTC
Wow, I've found some other people that seem to have the exact same problem: http://www.reddit.com/r/archlinux/comments/32cwhn/cant_enable_laptop_touchpad_under_gnome_shell/

Glad to be not the only one :)
Comment 5 Patrik Stutz 2015-04-13 17:38:03 UTC
What I noticed: The touchpad only does not work in gnome-shell! When I log out and the login screen (LightDM) shows up, the touchpad works until I log back in again.
Comment 6 Patrik Stutz 2015-04-13 17:42:09 UTC
Another link where gnome-shell crashes for a user, when he tries to toggle the touchpad: http://www.reddit.com/r/archlinux/comments/3218vr/and_gnome_316_is_in_archs_repos/
Comment 7 Rui Matos 2015-04-13 18:58:19 UTC
(In reply to Patrik Stutz from comment #3)
> Okay, here are the interesting lines from 'journalctl /bin/gnome-session -b
> 0' after I press FN+F9:

Please don't filter the journalctl output like that, post everything.

> Apr 13 19:09:36 antergosbook gnome-session[518]:
> (gnome-settings-daemon:1216): GLib-GIO-ERROR **: Settings schema
> 'org.gnome.settings-daemon.peripherals.touchpad' is not installed

Can you get a stack trace of this?
Comment 8 Patrik Stutz 2015-04-15 06:31:59 UTC
Created attachment 301591 [details]
journal

This is the complete journal of a boot to GDM, logging into gnome-shell & then pressing FN + F9 2 times, which leads to a crash. The journal was then retrieved thourgh a TTY before I pressed the restart session button.
Comment 9 Patrik Stutz 2015-04-15 06:34:16 UTC
Interesting fact: I'm currently playing around with the Wayland-session. It does not crash when hitting FN + F9, but it does also not work. It just always displays the "disabled" notification, but it does not disable the touchpad at all.
Comment 10 Rui Matos 2015-04-15 16:24:44 UTC
Created attachment 301660 [details] [review]
media-keys: Port touchpad toggle code to new settings schema

We forgot to update this on commit
ca754de5039fed6cb96b883dd8e41d8b22ebeea6 .
Comment 11 Rui Matos 2015-04-15 16:26:19 UTC
(In reply to Patrik Stutz from comment #9)
> Interesting fact: I'm currently playing around with the Wayland-session. It
> does not crash when hitting FN + F9, but it does also not work. It just
> always displays the "disabled" notification, but it does not disable the
> touchpad at all.

Yeah, it doesn't work in wayland sessions yet. Please file a separate bug for that.
Comment 12 Bastien Nocera 2015-04-20 09:38:26 UTC
Review of attachment 301660 [details] [review]:

Sure.
Comment 13 Rui Matos 2015-04-20 13:39:13 UTC
Attachment 301660 [details] pushed as fbbc7df - media-keys: Port touchpad toggle code to new settings schema