media-keys: Port touchpad toggle code to new settings schema

We forgot to update this on commit
ca754de5039fed6cb96b883dd8e41d8b22ebeea6 .

https://bugzilla.gnome.org/show_bug.cgi?id=747739